// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds repost views fetches reposted-by for a post 1`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "did": "user(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "name": "eve.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "did": "user(1)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "name": "dan.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "did": "user(2)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "name": "carol.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "did": "user(3)",
    "displayName": "bobby",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "name": "bob.test",
  },
]
`;

exports[`pds repost views fetches reposted-by for a reply 1`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "did": "user(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "name": "eve.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "did": "user(1)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "name": "dan.test",
  },
]
`;
